components/redis/execution/templates/client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: redis-client-ingress
spec:
  rules:
  - host: HOSTNAME
    http:
      paths:
      - backend:
          service:
            name: redis-ui
            port:
              name: http
        path: /
        pathType: Prefix
